syntax = "proto3";
package data.cashmere;

import "name.proto";

// 数据阶段信息
message StageInfo {
  string name = 1;
  // stage目录下的文件列表, 文件为文件列表，集合为集合目录列表
  repeated bytes versions = 2;
  // 当前连接所指版本
  string current_version = 3;
}

// 新阶段
message AddDataStageRequest {
  string data_id = 1;
  // 阶段在流程中一般是一项工作的再分解，属于一项工作的完成步骤，所以名称可能具有一定的一般性
  // 将作为实体的id，还将作为阶段的路径使用，不能重复
  // 阶段的字符集需要注意软件支持的字符集，比如Maya对中文支持友好
  string stage = 2;
  string description = 3;
}
message AddDataStageResponse {
  // 成功返回 "ok"
  string result = 1;
}

// 删除阶段，只删除阶段->数据的文件连接，不删除数据
message RemoveStageRequest {
  string data_id = 1;
  string stage = 2;
}
message RemoveStageResponse {
  // 成功返回 "ok"
  string result = 1;
}

// 取得数据阶段表
message ListDataStagesRequest {string data_id = 1;}
message ListDataStagesResponse {repeated bytes stages = 1;}

